# ric-coin

./: .gitignore  Cargo.toml  README.md
src/: blockchain.rs  keygenerator.rs  main.rs
