[package]
name = "ricoin"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9.8"
hex-literal = "0.3.3"
chrono = "0.4"
rand = "0.4.3"

[dependencies.secp256k1]
features = ["rand"]
version = "0.12.0"
